about overflow-x on mobile fixed

--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -63,3 +63,7 @@ a{
 a:hover{
 	color: white;
 }
+
+body{
+	overflow-x: hidden !important;
+}
